Fjerner mange nosonar og fikser noen bugs